fix:Java21対応で、SecurityManager を動的にインストールできるようにプロパティを追加（暫定対応） (#40)
* fix:Java21対応で、SecurityManager を動的にインストールできるようにプロパティを追加（暫定対応）

* fix:Java21対応で、SecurityManager を動的にインストールできるようにプロパティを追加（暫定対応）