@@ -81,6 +81,16 @@
         <junit.additionalArgLine></junit.additionalArgLine>
       </properties>
     </profile>
+    <profile>
+      <id>java21</id>
+      <activation>
+        <jdk>21</jdk>
+      </activation>
+      <properties>
+        <!-- testで用いられている SecurityManager はJava18からデフォルトで動的にインストールできないようになっており、Java21 で動かすとエラーになるため、明示的に許可する。 -->
+        <junit.additionalArgLine>-Djava.security.manager=allow</junit.additionalArgLine>
+      </properties>
+    </profile>
   </profiles>
 
   <dependencies>
